2014-04-12  Araki Ken  <arakiken@users.sf.net>

	* c_anim.gif, c_imagelib.c: If gdk_pixbuf_new_from() reads a GIF
	  Animation frame whose width and height are smaller than those of the
	  first frame, it resizes appropriately. (gdk_pixbuf_new_from_file()
	  ignores the logical width and height in the GIF header.)

	* x_picture.c: If it fails to load an animation gif frame, skip it.

2014-04-11  Araki Ken  <arakiken@users.sf.net>

	* x_display.c, MLActivity.java, c_animgif.c, c_imagelib.c, gdiplus.cpp,
	  x_picture.c: ~/.mlterm/anim.gif => ~/.mlterm/anim%d.gif to support
	  asynchronous loading.

2014-04-10  Araki Ken  <arakiken@users.sf.net>

	* x_picture.[ch]: It is possible to load GIF files asynchronously.

	* MLActivity.java: Minor fixes.

2014-04-09  Araki Ken  <arakiken@users.sf.net>

	* x_event_source.c: update_ime_text() and x_display_idling() are called
	  in idling.

2014-04-07  Araki Ken  <arakiken@users.sf.net>

	* MLActivity.java, x_display.c: The failure of animating gif images downloaded
	  from remote hosts on Android is fixed.

	* c_animgif.c: The processing of dispose method is fixed.

2014-04-06  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, c_animgif.c: ~/.mlterm/anim%d.gif => ~/.mlterm/anim.gif

	* c_animgif.c: Separated from c_imagelib.c.

	* android/jni/x_display.c, android/jni/x_event_source.c, MLActivity.java:
	  Animation GIF is supported on Android.

2014-04-05  Araki Ken  <arakiken@users.sf.net>

	* x_picture.c, x_screen.[ch]: Waiting between animation frames is
	  managed in x_screen.[ch] instead of x_picture.c.

	* gdiplus.cpp: Fix for win32.

2014-04-05  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_window.c: XSetClipMask(None) is called in x_window_update().

	* x_picture.[ch], c_imagelib.c, gdiplus.cpp, xlib/x_imagelib.c, x_draw_str.c:
	  The number of gif animation frames is unlimited.

2014-03-31  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: O_BINARY is added to open() in reading animation gif on win32.
